# qucs_s

./: CMakeLists.txt
qucs/: CMakeLists.txt  imagewriter.cpp  main.cpp  main.h  messagedock.cpp  misc.cpp  module.cpp  mouseactions.cpp  mouseactions.h  node.h  octave_window.cpp  octave_window.h  printerwriter.cpp  projectView.cpp  qucs.cpp  qucs_actions.cpp  qucs_init.cpp  qucsdoc.cpp  schematic.cpp  schematic.h  schematic_element.cpp  schematic_file.cpp  syntax.cpp  syntax.h  textdoc.cpp  viewpainter.cpp
qucs-lib/: CMakeLists.txt  displaydialog.cpp  librarydialog.cpp  librarydialog.h  qucslib.cpp  qucslib_common.h  symbolwidget.cpp
qucs/components/: CMakeLists.txt  component.cpp  component.h  componentdialog.cpp  components.h  eqndefined.cpp  equation.cpp  hb_sim.cpp  libcomp.cpp  mstee.cpp  mutual2.cpp  opt_sim.cpp  optimizedialog.cpp  optimizedialog.h  param_sweep.cpp  rfedd.cpp  rfedd2p.cpp  rlcg.cpp  sparamfile.cpp  spicedialog.cpp  spicedialog.h  spicefile.cpp  symtrafo.cpp  vafile.cpp  verilogfile.cpp  vhdlfile.cpp
qucs/diagrams/: CMakeLists.txt  curvediagram.cpp  diagram.cpp  diagramdialog.cpp  diagramdialog.h  graph.h  marker.cpp  markerdialog.cpp  markerdialog.h  rect3ddiagram.cpp  rectdiagram.cpp  timingdiagram.cpp  truthdiagram.cpp
qucs/dialogs/: CMakeLists.txt  changedialog.cpp  changedialog.h  digisettingsdialog.cpp  digisettingsdialog.h  labeldialog.cpp  labeldialog.h  librarydialog.cpp  librarydialog.h  loaddialog.cpp  loaddialog.h  packagedialog.cpp  packagedialog.h  qucssettingsdialog.cpp  qucssettingsdialog.h  savedialog.cpp  savedialog.h  settingsdialog.cpp  settingsdialog.h  simmessage.cpp  simmessage.h  sweepdialog.cpp  sweepdialog.h  textboxdialog.h  vasettingsdialog.cpp  vasettingsdialog.h
qucs/extsimkernels/: CMakeLists.txt  abstractspicekernel.cpp  codemodelgen.cpp  customsimdialog.cpp  customsimdialog.h  externsimdialog.h  ngspice.cpp  qucs2spice.cpp  simsettingsdialog.cpp  simsettingsdialog.h  spicecompat.cpp  verilogawriter.cpp  xspice_cmbuilder.cpp  xyce.cpp
qucs/paintings/: CMakeLists.txt  arrowdialog.cpp  arrowdialog.h  ellipse.cpp  ellipsearc.cpp  filldialog.cpp  filldialog.h  graphicline.cpp  graphicline.h  graphictext.cpp  graphictextdialog.cpp  graphictextdialog.h  id_dialog.cpp  id_dialog.h  id_text.cpp  portsymbol.cpp  rectangle.cpp
qucs/spicecomponents/: CMakeLists.txt  spicegeneric.cpp  xspicegeneric.cpp
qucs/tools/: CMakeLists.txt  q3dict.h  q3frame.h  q3gdict.cpp  q3gdict.h  q3glist.cpp  q3glist.h  q3gvector.cpp  q3gvector.h  q3ptrcollection.h  q3ptrdict.h  q3ptrlist.h  q3scrollview.cpp  q3scrollview.h  q3valuelist.h  qlinkedlist.h
